Theme: fix styles for 'Log in' secondary menu bar:
- Recent changes broke the link color in this menu so it was plum on
  plum (invisible). Now links in this menu are explicitly white.
- There was a 10px margin leaving a strip of white above the bar.

--- a/web/themes/custom/breema2/css/styles.css
+++ b/web/themes/custom/breema2/css/styles.css
@@ -529,6 +529,16 @@ a.teaser-link:hover .teaser-wrapper {
 .region-secondary-menu .menu {
   margin: 0 15px;
 }
+.region-secondary-menu a {
+  color: rgba(255, 255, 255, 0.8);
+}
+.region-secondary-menu a:focus,
+.region-secondary-menu a:hover {
+  color: #fff;
+}
+.region-secondary-menu .block .content {
+  margin: 0;
+}
 
 .site-branding__name {
   font-family: Georgia, "Times New Roman", Times, serif;
