--- a/web/themes/custom/breema2/sass/global/_header.scss
+++ b/web/themes/custom/breema2/sass/global/_header.scss
@@ -3,6 +3,16 @@
   .menu {
     margin: 0 15px;
   }
+  a {
+    color: $c-white-80o;
+  }
+  a:focus,
+  a:hover {
+    color: $c-white;
+  }
+  .block .content {
+    margin: 0;
+  }
 }    
 
 .site-branding__name {
